src/test/ui/regions/regions-variance-contravariant-use-covariant.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-variance-contravariant-use-covariant.rs:33:9
   |
LL | fn use_<'short,'long>(c: Contravariant<'short>,
   |         ------ ----- lifetime `'long` defined here
   |         |
   |         lifetime `'short` defined here
...
LL |     let _: Contravariant<'long> = c; //~ ERROR E0623
   |         ^ type annotation requires that `'short` must outlive `'long`

error: aborting due to previous error

